Migração para MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-# Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto_udemy?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=swc123
-spring.jpa.hibernate.ddl-auto=create
+# MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=dbudemy
